Fix the stretching of the image on larger displays

--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ h1 {
 }
 
 #main-photo {
-    height: 240px;
+    flex-shrink: 0;
+
     width: 520px;
 }
 
